# neftecode_AAA_IT

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/backend/: __init__.py  main.py
app/backend/example/: example.csv
app/frontend/: .env-sample  package-lock.json  package.json
app/frontend/public/: index.html  manifest.json
app/frontend/src/: App.css  App.js  index.css
app/frontend/src/components/categories/: Categories.jsx
app/frontend/src/components/csv_table/: CsvTable.jsx
app/frontend/src/components/file_uploader/: FileUploader.jsx
app/frontend/src/components/footer/: Footer.jsx
app/frontend/src/components/headers/: Header.js  style.css
app/frontend/src/components/info/: InfoPage.js  style.css
app/frontend/src/components/main/: MainPage.jsx
app/frontend/src/components/modal/: ExampleModal.js  TypeModal.js
app/frontend/src/components/toast/: MyToast.jsx
app/frontend/src/components/types_dropdown/: TypesDropdown.jsx
conf/nginx/: nginx.conf
conf/nginx/sites-enabled/: default
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/webserver/: Dockerfile
tests/: test_project.py
